# qt_qml_template

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.zed/: settings.json
cmake/: BuildOptions.cmake  BuildPresets.cmake  Dependencies.cmake  Info.plist.in  Packaging.cmake  PlatformConfig.cmake  QmlCppTemplateConfig.cmake  QtConfig.cmake  README.md
cmake/templates/: BuildInfo.h.in
dependencies/: .gitignore  CMakeLists.txt  README.md  ThirdPartyConfig.cmake.in
docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  CODE_STANDARDS.md  DEVELOPMENT.md  FAQ.md  PLUGIN_GUIDE.md  README.md
qml/: README.md  main.qml  qml.qrc
qml/components/: Card.qml
qml/js/: Common.js
qml/pages/: MainPage.qml
qml/theme/: Theme.qml
resources/: CMakeLists.txt
resources/qml/: CMakeLists.txt  main.qml  qml.qrc  qmldir
resources/qml/pages/: MainPage.qml
resources/translation/: README.md  app_en_US.ts  app_zh_CN.ts  translations.qrc
src/: CMakeLists.txt  README.md  main.cpp
src/business/: CMakeLists.txt
src/business/services/: DataService.cpp  DataService.h
src/business/viewmodels/: AppViewModel.cpp  AppViewModel.h  DataViewModel.cpp  DataViewModel.h
src/core/: Application.cpp  Application.h  CMakeLists.txt  QmlTypeRegistry.cpp  QmlTypeRegistry.h  ResourceManager.cpp  ResourceManager.h
src/data/: CMakeLists.txt
src/data/models/: DataModel.cpp  DataModel.h
src/models/: CMakeLists.txt  DataModel.cpp
src/plugin/: BasePlugin.cpp  BasePlugin.h  CMakeLists.txt  IPlugin.h  PluginLoader.cpp  PluginLoader.h  PluginManager.cpp  PluginManager.h
src/plugin/log/: CMakeLists.txt  LogController.cpp  LogController.h  LogFormatter.cpp  LogFormatter.h  LogMacros.h  README.md  SmartLogHandler.h  SmartLogPlugin.cpp  SmartLogPlugin.h  ZeroOverheadLog.h  smartlog.json
src/ui/: CMakeLists.txt
src/ui/backend/: UiBackend.cpp  UiBackend.h
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_data_model.cpp
